# POC-Reference-DB

./: .gitignore  Dockerfile  README.md  analyze_datasets.py  compliments_pipeline.duckdb  docker-compose.yml  main.py  nutrition_pipeline.duckdb  pyproject.toml  requirements.txt
api/: main.py
configs/: logging.yaml  pipeline.yaml  sources.yaml
pipelines/ingestion/: run.py
pipelines/roadmap/: phase0_raw.py  phase1_profiling.py  phase2_normalization.py  phase3_extraction.py  phase4_core_variant.py  phase5_validation.py  phase6_splink.py  phase7_unified.py  phase8_consumption.py  run.py
pipelines/transformation/: dedup.py  intermediate.py  marts.py  quality.py  run.py  staging.py
schemas/: intermediate_schema.py  marts_schema.py  normalized_schema.py  nutritional_schema.py  raw_schema.py  staging_schema.py  validation_schema.py
scrapers/: base.py
scrapers/alimentsduquebec/: scraper.py
scrapers/compliments/: scraper.py
scrapers/madeinca/: scraper.py
scrapers/smartlabel/: scraper.py
scrapers/sobeys/: scraper.py
scripts/: build_canonical.py  enrich_voila.py  enrich_voila_v2.py  normalize_voila.py  sobeys_scraper.py
storage/duckdb/: store.py
storage/huggingface/: upload.py
tests/unit/: test_scraper.py
utils/: config.py  io_utils.py  logger.py  retry.py  validators.py
web/: data.json  index.html
